// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`<Tabs /> > should allow id overriding 1`] = `
<div
  class="vars_OD_Base__1f5yyro0"
  data-od-component-provider=""
>
  <div
    class="reset_block__1oah0224 useBoxStyles_makeResponsiveStyle_key_bp__3xgq1lgz TabList_styledTabList__1cu98lp0 TabList_styledTabList_appearance_underlined__1cu98lp1"
  >
    <div
      class="reset_block__1oah0224"
    >
      <div
        aria-orientation="horizontal"
        class="reset_block__1oah0224 useBoxStyles_display_block__3xgq1lg9 useBoxStyles_width_full__3xgq1lfv useBoxStyles_flexWrap_nowrap__3xgq1lhr useTextStyles_root__1xnpmd70 reset_block__1oah0224 useTextStyles_colours_neutral__1xnpmd7i useTextStyles_noWrap__1xnpmd7r"
        role="tablist"
      >
        <button
          aria-selected="true"
          class="reset_appearance__1oah0221 reset_cursorPointer__1oah0222 reset_trimmedBlockElement__1oah0226 reset_button__1oah0227 useBoxStyles_display_inlineFlex__3xgq1lgc useBoxStyles_backgroundColours_transparent__3xgq1lfl useBoxStyles_makeResponsiveStyle_key_bp__3xgq1lhw useTextStyles_root__1xnpmd70 reset_block__1oah0224 useTextStyles_colours_light__1xnpmd7j useTextStyles_fontWeight_bold__1xnpmd7q useTextStyles_noWrap__1xnpmd7r useTextStyles_sizes_3__1xnpmd73 Tab_styledTab__11wt3mu0 Tab_styledTab_appearance_underlined__11wt3mu1 Tab_styledTab_active_true__11wt3mu3 Tab_styledTab_compound_0__11wt3mu4"
          data-controls="tab-1-title-0"
          role="tab"
        >
          <span
            class="Tab_item__11wt3mu6"
          >
            tab 1 title
          </span>
        </button>
        <button
          aria-selected="false"
          class="reset_appearance__1oah0221 reset_cursorPointer__1oah0222 reset_trimmedBlockElement__1oah0226 reset_button__1oah0227 useBoxStyles_display_inlineFlex__3xgq1lgc useBoxStyles_backgroundColours_transparent__3xgq1lfl useBoxStyles_makeResponsiveStyle_key_bp__3xgq1lhw useTextStyles_root__1xnpmd70 reset_block__1oah0224 useTextStyles_colours_light__1xnpmd7j useTextStyles_fontWeight_bold__1xnpmd7q useTextStyles_noWrap__1xnpmd7r useTextStyles_sizes_3__1xnpmd73 Tab_styledTab__11wt3mu0 Tab_styledTab_appearance_underlined__11wt3mu1"
          data-controls="tab-2-title-1"
          role="tab"
          tabindex="-1"
        >
          <span
            class="Tab_item__11wt3mu6"
          >
            tab 2 title
          </span>
        </button>
        <button
          aria-selected="false"
          class="reset_appearance__1oah0221 reset_cursorPointer__1oah0222 reset_trimmedBlockElement__1oah0226 reset_button__1oah0227 useBoxStyles_display_inlineFlex__3xgq1lgc useBoxStyles_backgroundColours_transparent__3xgq1lfl useBoxStyles_makeResponsiveStyle_key_bp__3xgq1lhw useTextStyles_root__1xnpmd70 reset_block__1oah0224 useTextStyles_colours_light__1xnpmd7j useTextStyles_fontWeight_bold__1xnpmd7q useTextStyles_noWrap__1xnpmd7r useTextStyles_sizes_3__1xnpmd73 Tab_styledTab__11wt3mu0 Tab_styledTab_appearance_underlined__11wt3mu1"
          data-controls="tab-3-title-2"
          role="tab"
          tabindex="-1"
        >
          <span
            class="Tab_item__11wt3mu6"
          >
            tab 3 title
          </span>
        </button>
      </div>
    </div>
  </div>
  <div
    class="reset_block__1oah0224 useBoxStyles_makeResponsiveStyle_key_bp__3xgq1lk useBoxStyles_makeResponsiveStyle_key_bp__3xgq1l2s useBoxStyles_width_full__3xgq1lfv TabPanes_root__15xyz920"
  >
    <div
      class="reset_block__1oah0224 useBoxStyles_width_full__3xgq1lfv TabPane_root__1e18dwc0"
      id="tab-1-title-0"
      role="tabpanel"
      tabindex="0"
    >
      <input
        data-testid="checkbox-tab-1-title-0"
        type="checkbox"
      />
      tab 1 content
    </div>
    <div
      aria-hidden="true"
      class="reset_block__1oah0224 useBoxStyles_display_none__3xgq1lgf useBoxStyles_width_full__3xgq1lfv TabPane_root__1e18dwc0"
      id="tab-2-title-1"
      role="tabpanel"
      tabindex="0"
    />
    <div
      aria-hidden="true"
      class="reset_block__1oah0224 useBoxStyles_display_none__3xgq1lgf useBoxStyles_width_full__3xgq1lfv TabPane_root__1e18dwc0"
      id="tab-3-title-2"
      role="tabpanel"
      tabindex="0"
    />
  </div>
</div>
`;

exports[`<Tabs /> > should allow rendering indications 1`] = `
<div
  class="vars_OD_Base__1f5yyro0"
  data-od-component-provider=""
>
  <div
    class="reset_block__1oah0224 useBoxStyles_makeResponsiveStyle_key_bp__3xgq1lgz TabList_styledTabList__1cu98lp0 TabList_styledTabList_appearance_underlined__1cu98lp1"
  >
    <div
      class="reset_block__1oah0224"
    >
      <div
        aria-orientation="horizontal"
        class="reset_block__1oah0224 useBoxStyles_display_block__3xgq1lg9 useBoxStyles_width_full__3xgq1lfv useBoxStyles_flexWrap_nowrap__3xgq1lhr useTextStyles_root__1xnpmd70 reset_block__1oah0224 useTextStyles_colours_neutral__1xnpmd7i useTextStyles_noWrap__1xnpmd7r"
        role="tablist"
      >
        <button
          aria-selected="true"
          class="reset_appearance__1oah0221 reset_cursorPointer__1oah0222 reset_trimmedBlockElement__1oah0226 reset_button__1oah0227 useBoxStyles_display_inlineFlex__3xgq1lgc useBoxStyles_backgroundColours_transparent__3xgq1lfl useBoxStyles_makeResponsiveStyle_key_bp__3xgq1lhw useTextStyles_root__1xnpmd70 reset_block__1oah0224 useTextStyles_colours_light__1xnpmd7j useTextStyles_fontWeight_bold__1xnpmd7q useTextStyles_noWrap__1xnpmd7r useTextStyles_sizes_3__1xnpmd73 Tab_styledTab__11wt3mu0 Tab_styledTab_appearance_underlined__11wt3mu1 Tab_styledTab_active_true__11wt3mu3 Tab_styledTab_compound_0__11wt3mu4"
          data-controls="od-11-0-tab"
          role="tab"
        >
          <div
            class="reset_block__1oah0224 useBoxStyles_display_flex__3xgq1lga useBoxStyles_position_relative__3xgq1lg0 useBoxStyles_makeResponsiveStyle_key_bp__3xgq1lgz useBoxStyles_makeResponsiveStyle_key_bp__3xgq1lh7 useBoxStyles_flexWrap_nowrap__3xgq1lhr useBoxStyles_makeResponsiveStyle_key_bp__3xgq1lhw useNegativeMarginTop_makeResponsiveStyle_key_bp__rvovxw4 useNegativeMarginLeft_makeResponsiveStyle_key_bp__10sqwm24"
          >
            <div
              class="reset_block__1oah0224 useBoxStyles_makeResponsiveStyle_key_bp__3xgq1l4 useBoxStyles_makeResponsiveStyle_key_bp__3xgq1l3g useBoxStyles_display_flex__3xgq1lga useBoxStyles_makeResponsiveStyle_key_bp__3xgq1lgz useBoxStyles_makeResponsiveStyle_key_bp__3xgq1lh7 useBoxStyles_flexWrap_nowrap__3xgq1lhr"
            >
              <span
                class="Tab_item__11wt3mu6"
              >
                tab 1 title
              </span>
            </div>
            <div
              class="reset_block__1oah0224 useBoxStyles_makeResponsiveStyle_key_bp__3xgq1l4 useBoxStyles_makeResponsiveStyle_key_bp__3xgq1l3g useBoxStyles_display_flex__3xgq1lga useBoxStyles_makeResponsiveStyle_key_bp__3xgq1lgz useBoxStyles_makeResponsiveStyle_key_bp__3xgq1lh7 useBoxStyles_flexWrap_nowrap__3xgq1lhr"
            >
              <span
                class="reset_inlineText__1oah0223 useBoxStyles_display_block__3xgq1lg9 useBoxStyles_textAlign_center__3xgq1lg2 useTextStyles_root__1xnpmd70 reset_inlineText__1oah0223 useTextStyles_colours_white__1xnpmd7g useTextStyles_fontWeight_bold__1xnpmd7q useTextStyles_sizes_2__1xnpmd72 Tab_indication__11wt3mu7 Tab_indication_appearance_underlined__11wt3mu8 Tab_indication_active_true__11wt3mua Tab_indication_compound_0__11wt3mub"
              >
                5
              </span>
            </div>
          </div>
        </button>
        <button
          aria-selected="false"
          class="reset_appearance__1oah0221 reset_cursorPointer__1oah0222 reset_trimmedBlockElement__1oah0226 reset_button__1oah0227 useBoxStyles_display_inlineFlex__3xgq1lgc useBoxStyles_backgroundColours_transparent__3xgq1lfl useBoxStyles_makeResponsiveStyle_key_bp__3xgq1lhw useTextStyles_root__1xnpmd70 reset_block__1oah0224 useTextStyles_colours_light__1xnpmd7j useTextStyles_fontWeight_bold__1xnpmd7q useTextStyles_noWrap__1xnpmd7r useTextStyles_sizes_3__1xnpmd73 Tab_styledTab__11wt3mu0 Tab_styledTab_appearance_underlined__11wt3mu1"
          data-controls="od-11-1-tab"
          role="tab"
          tabindex="-1"
        >
          <div
            class="reset_block__1oah0224 useBoxStyles_display_flex__3xgq1lga useBoxStyles_position_relative__3xgq1lg0 useBoxStyles_makeResponsiveStyle_key_bp__3xgq1lgz useBoxStyles_makeResponsiveStyle_key_bp__3xgq1lh7 useBoxStyles_flexWrap_nowrap__3xgq1lhr useBoxStyles_makeResponsiveStyle_key_bp__3xgq1lhw useNegativeMarginTop_makeResponsiveStyle_key_bp__rvovxw4 useNegativeMarginLeft_makeResponsiveStyle_key_bp__10sqwm24"
          >
            <div
              class="reset_block__1oah0224 useBoxStyles_makeResponsiveStyle_key_bp__3xgq1l4 useBoxStyles_makeResponsiveStyle_key_bp__3xgq1l3g useBoxStyles_display_flex__3xgq1lga useBoxStyles_makeResponsiveStyle_key_bp__3xgq1lgz useBoxStyles_makeResponsiveStyle_key_bp__3xgq1lh7 useBoxStyles_flexWrap_nowrap__3xgq1lhr"
            >
              <span
                class="Tab_item__11wt3mu6"
              >
                tab 2 title
              </span>
            </div>
            <div
              class="reset_block__1oah0224 useBoxStyles_makeResponsiveStyle_key_bp__3xgq1l4 useBoxStyles_makeResponsiveStyle_key_bp__3xgq1l3g useBoxStyles_display_flex__3xgq1lga useBoxStyles_makeResponsiveStyle_key_bp__3xgq1lgz useBoxStyles_makeResponsiveStyle_key_bp__3xgq1lh7 useBoxStyles_flexWrap_nowrap__3xgq1lhr"
            >
              <span
                class="reset_inlineText__1oah0223 useBoxStyles_display_block__3xgq1lg9 useBoxStyles_textAlign_center__3xgq1lg2 useTextStyles_root__1xnpmd70 reset_inlineText__1oah0223 useTextStyles_colours_dark__1xnpmd7f useTextStyles_fontWeight_bold__1xnpmd7q useTextStyles_sizes_2__1xnpmd72 Tab_indication__11wt3mu7 Tab_indication_appearance_underlined__11wt3mu8"
              >
                5
              </span>
            </div>
          </div>
        </button>
        <button
          aria-selected="false"
          class="reset_appearance__1oah0221 reset_cursorPointer__1oah0222 reset_trimmedBlockElement__1oah0226 reset_button__1oah0227 useBoxStyles_display_inlineFlex__3xgq1lgc useBoxStyles_backgroundColours_transparent__3xgq1lfl useBoxStyles_makeResponsiveStyle_key_bp__3xgq1lhw useTextStyles_root__1xnpmd70 reset_block__1oah0224 useTextStyles_colours_light__1xnpmd7j useTextStyles_fontWeight_bold__1xnpmd7q useTextStyles_noWrap__1xnpmd7r useTextStyles_sizes_3__1xnpmd73 Tab_styledTab__11wt3mu0 Tab_styledTab_appearance_underlined__11wt3mu1"
          data-controls="od-11-2-tab"
          role="tab"
          tabindex="-1"
        >
          <div
            class="reset_block__1oah0224 useBoxStyles_display_flex__3xgq1lga useBoxStyles_position_relative__3xgq1lg0 useBoxStyles_makeResponsiveStyle_key_bp__3xgq1lgz useBoxStyles_makeResponsiveStyle_key_bp__3xgq1lh7 useBoxStyles_flexWrap_nowrap__3xgq1lhr useBoxStyles_makeResponsiveStyle_key_bp__3xgq1lhw useNegativeMarginTop_makeResponsiveStyle_key_bp__rvovxw4 useNegativeMarginLeft_makeResponsiveStyle_key_bp__10sqwm24"
          >
            <div
              class="reset_block__1oah0224 useBoxStyles_makeResponsiveStyle_key_bp__3xgq1l4 useBoxStyles_makeResponsiveStyle_key_bp__3xgq1l3g useBoxStyles_display_flex__3xgq1lga useBoxStyles_makeResponsiveStyle_key_bp__3xgq1lgz useBoxStyles_makeResponsiveStyle_key_bp__3xgq1lh7 useBoxStyles_flexWrap_nowrap__3xgq1lhr"
            >
              <span
                class="Tab_item__11wt3mu6"
              >
                tab 3 title
              </span>
            </div>
            <div
              class="reset_block__1oah0224 useBoxStyles_makeResponsiveStyle_key_bp__3xgq1l4 useBoxStyles_makeResponsiveStyle_key_bp__3xgq1l3g useBoxStyles_display_flex__3xgq1lga useBoxStyles_makeResponsiveStyle_key_bp__3xgq1lgz useBoxStyles_makeResponsiveStyle_key_bp__3xgq1lh7 useBoxStyles_flexWrap_nowrap__3xgq1lhr"
            >
              <span
                class="reset_inlineText__1oah0223 useBoxStyles_display_block__3xgq1lg9 useBoxStyles_textAlign_center__3xgq1lg2 useTextStyles_root__1xnpmd70 reset_inlineText__1oah0223 useTextStyles_colours_dark__1xnpmd7f useTextStyles_fontWeight_bold__1xnpmd7q useTextStyles_sizes_2__1xnpmd72 Tab_indication__11wt3mu7 Tab_indication_appearance_underlined__11wt3mu8"
              >
                5
              </span>
            </div>
          </div>
        </button>
      </div>
    </div>
  </div>
  <div
    class="reset_block__1oah0224 useBoxStyles_makeResponsiveStyle_key_bp__3xgq1lk useBoxStyles_makeResponsiveStyle_key_bp__3xgq1l2s useBoxStyles_width_full__3xgq1lfv TabPanes_root__15xyz920"
  >
    <div
      class="reset_block__1oah0224 useBoxStyles_width_full__3xgq1lfv TabPane_root__1e18dwc0"
      id="od-11-0-tab"
      role="tabpanel"
      tabindex="0"
    >
      <input
        data-testid="checkbox-null"
        type="checkbox"
      />
      tab 1 content
    </div>
    <div
      aria-hidden="true"
      class="reset_block__1oah0224 useBoxStyles_display_none__3xgq1lgf useBoxStyles_width_full__3xgq1lfv TabPane_root__1e18dwc0"
      id="od-11-1-tab"
      role="tabpanel"
      tabindex="0"
    />
    <div
      aria-hidden="true"
      class="reset_block__1oah0224 useBoxStyles_display_none__3xgq1lgf useBoxStyles_width_full__3xgq1lfv TabPane_root__1e18dwc0"
      id="od-11-2-tab"
      role="tabpanel"
      tabindex="0"
    />
  </div>
</div>
`;

exports[`<Tabs /> > should match snapshot (high level) 1`] = `
<div
  class="vars_OD_Base__1f5yyro0"
  data-od-component-provider=""
>
  <div
    class="reset_block__1oah0224 useBoxStyles_makeResponsiveStyle_key_bp__3xgq1lgz TabList_styledTabList__1cu98lp0 TabList_styledTabList_appearance_underlined__1cu98lp1"
  >
    <div
      class="reset_block__1oah0224"
    >
      <div
        aria-orientation="horizontal"
        class="reset_block__1oah0224 useBoxStyles_display_block__3xgq1lg9 useBoxStyles_width_full__3xgq1lfv useBoxStyles_flexWrap_nowrap__3xgq1lhr useTextStyles_root__1xnpmd70 reset_block__1oah0224 useTextStyles_colours_neutral__1xnpmd7i useTextStyles_noWrap__1xnpmd7r"
        role="tablist"
      >
        <button
          aria-selected="true"
          class="reset_appearance__1oah0221 reset_cursorPointer__1oah0222 reset_trimmedBlockElement__1oah0226 reset_button__1oah0227 useBoxStyles_display_inlineFlex__3xgq1lgc useBoxStyles_backgroundColours_transparent__3xgq1lfl useBoxStyles_makeResponsiveStyle_key_bp__3xgq1lhw useTextStyles_root__1xnpmd70 reset_block__1oah0224 useTextStyles_colours_light__1xnpmd7j useTextStyles_fontWeight_bold__1xnpmd7q useTextStyles_noWrap__1xnpmd7r useTextStyles_sizes_3__1xnpmd73 Tab_styledTab__11wt3mu0 Tab_styledTab_appearance_underlined__11wt3mu1 Tab_styledTab_active_true__11wt3mu3 Tab_styledTab_compound_0__11wt3mu4"
          data-controls="od-1-0-tab"
          role="tab"
        >
          <span
            class="Tab_item__11wt3mu6"
          >
            tab 1 title
          </span>
        </button>
        <button
          aria-selected="false"
          class="reset_appearance__1oah0221 reset_cursorPointer__1oah0222 reset_trimmedBlockElement__1oah0226 reset_button__1oah0227 useBoxStyles_display_inlineFlex__3xgq1lgc useBoxStyles_backgroundColours_transparent__3xgq1lfl useBoxStyles_makeResponsiveStyle_key_bp__3xgq1lhw useTextStyles_root__1xnpmd70 reset_block__1oah0224 useTextStyles_colours_light__1xnpmd7j useTextStyles_fontWeight_bold__1xnpmd7q useTextStyles_noWrap__1xnpmd7r useTextStyles_sizes_3__1xnpmd73 Tab_styledTab__11wt3mu0 Tab_styledTab_appearance_underlined__11wt3mu1"
          data-controls="od-1-1-tab"
          role="tab"
          tabindex="-1"
        >
          <span
            class="Tab_item__11wt3mu6"
          >
            tab 2 title
          </span>
        </button>
        <button
          aria-selected="false"
          class="reset_appearance__1oah0221 reset_cursorPointer__1oah0222 reset_trimmedBlockElement__1oah0226 reset_button__1oah0227 useBoxStyles_display_inlineFlex__3xgq1lgc useBoxStyles_backgroundColours_transparent__3xgq1lfl useBoxStyles_makeResponsiveStyle_key_bp__3xgq1lhw useTextStyles_root__1xnpmd70 reset_block__1oah0224 useTextStyles_colours_light__1xnpmd7j useTextStyles_fontWeight_bold__1xnpmd7q useTextStyles_noWrap__1xnpmd7r useTextStyles_sizes_3__1xnpmd73 Tab_styledTab__11wt3mu0 Tab_styledTab_appearance_underlined__11wt3mu1"
          data-controls="od-1-2-tab"
          role="tab"
          tabindex="-1"
        >
          <span
            class="Tab_item__11wt3mu6"
          >
            tab 3 title
          </span>
        </button>
      </div>
    </div>
  </div>
  <div
    class="reset_block__1oah0224 useBoxStyles_makeResponsiveStyle_key_bp__3xgq1lk useBoxStyles_makeResponsiveStyle_key_bp__3xgq1l2s useBoxStyles_width_full__3xgq1lfv TabPanes_root__15xyz920"
  >
    <div
      class="reset_block__1oah0224 useBoxStyles_width_full__3xgq1lfv TabPane_root__1e18dwc0"
      id="od-1-0-tab"
      role="tabpanel"
      tabindex="0"
    >
      <input
        data-testid="checkbox-null"
        type="checkbox"
      />
      tab 1 content
    </div>
    <div
      aria-hidden="true"
      class="reset_block__1oah0224 useBoxStyles_display_none__3xgq1lgf useBoxStyles_width_full__3xgq1lfv TabPane_root__1e18dwc0"
      id="od-1-1-tab"
      role="tabpanel"
      tabindex="0"
    />
    <div
      aria-hidden="true"
      class="reset_block__1oah0224 useBoxStyles_display_none__3xgq1lgf useBoxStyles_width_full__3xgq1lfv TabPane_root__1e18dwc0"
      id="od-1-2-tab"
      role="tabpanel"
      tabindex="0"
    />
  </div>
</div>
`;
